--- a/dashboard-performance.html
+++ b/dashboard-performance.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <title>Performance</title>
@@ -68,7 +69,7 @@
                     </i>
                   </span>
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/income.svg" alt="" height="17px">
                   </span>
                   <span class="nav-text">Income</span>
                 </a>
@@ -80,23 +81,23 @@
                   </li>
                   <li>
                     <a href="income-commission.html">
-                      <span class="nav-text">Total Supacash Commission</span>
+                      <span class="nav-text">Supacash Commission</span>
                     </a>
                   </li>
                 </ul>
               </li>
               <li>
-                <a href="withdrawal.html">
+                <a href="payout.html">
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/payout.svg" alt="" height="17px">
                   </span>
-                  <span class="nav-text">Withdrawal</span>
+                  <span class="nav-text">Payout</span>
                 </a>
               </li>
               <li>
                 <a href="supacash.html">
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/voucher.svg" alt="" height="17px">
                   </span>
                   <span class="nav-text">SupaCash</span>
                 </a>
@@ -104,7 +105,7 @@
               <li>
                 <a href="register-players.html">
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/user.svg" alt="" height="17px">
                   </span>
                   <span class="nav-text">Register Players</span>
                 </a>
@@ -115,7 +116,7 @@
                     <i class="fa fa-caret-down"></i>
                   </span>
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/Reports.svg" alt="" height="17px">
                   </span>
                   <span class="nav-text">Reports</span>
                 </a>
@@ -126,8 +127,8 @@
                     </a>
                   </li>
                   <li>
-                    <a href="report-withdrawal.html">
-                      <span class="nav-text">Withdrawal History</span>
+                    <a href="report-payout.html">
+                      <span class="nav-text">Payout History</span>
                     </a>
                   </li>
                 </ul>
@@ -164,10 +165,35 @@
 
           <!-- navbar right -->
           <ul class="nav navbar-nav flex-row align-items-center ml-auto">
-            <button class="btn btn-outline b-white text-white mr-3 d-none d-sm-block">Top up: R10,000.00</button>
-            <button class="btn btn-outline b-white text-white mr-3 d-none d-sm-block tooltip2">Commission: R10,000.00 <span class="tooltiptext2">Available to Withdraw: R1,000.00</span></button>
-            <button class="btn btn-outline b-white text-white mr-3 d-block d-sm-none">TU:R10,000.00</button>
-            <button class="btn btn-outline b-white text-white mr-3 d-block d-sm-none tooltip2">C: R10,000.00</button>
+            <div class="row m-0 white align-items-center p-1 mr-2 mr-sm-3">
+              <div class="col-4 p-0">
+                <i class="material-icons text-info" style="font-size: 25px;">&#xe850;</i>
+              </div>
+              <div class="col-8 p-0 text-info ">
+                <p style="font-size: 10px;" class="p-0 m-0">Top Up</p>
+                <p style="font-size: 10px;" class="p-0 m-0">R10,000.00</p>
+              </div>
+            </div>
+            <div class="row m-0 white align-items-center p-1 mr-2 mr-sm-3">
+              <div class="col-4 p-0">
+                <i class="material-icons text-success" style="font-size: 25px;">&#xe850;</i>
+              </div>
+              <div class="col-8 p-0 text-success ">
+                <p style="font-size: 10px;" class="p-0 m-0">Commission</p>
+                <p style="font-size: 10px;" class="p-0 m-0">R10,000.00</p>
+              </div>
+            </div>
+             
+            <!-- <div class="row m-0 white align-items-center p-1 tooltip2">
+              <div class="col-4 p-0">
+                <i class="material-icons text-info" style="font-size: 25px;">&#xe850;</i>
+              </div>
+              <div class="col-8 p-0 text-info">
+                <p style="font-size: 10px;" class="p-0 m-0">Commission:</p>
+                <p style="font-size: 10px;" class="p-0 m-0">R10,000.00</p>
+              </div>
+              <span class="tooltiptext2">Available to Withdraw: R1,000.00</span>
+            </div> -->
             <li class="nav-item dropdown">
               <a href class="nav-link dropdown-toggle text-ellipsis p-0" data-toggle="dropdown">
                 <span class="avatar w-32">
@@ -204,7 +230,7 @@
             </div>
             <div class="col-12 col-sm-8 d-flex justify-content-sm-end pt-3 pt-sm-0 px-0">
               <div class="btn-group">
-                <button type="button" class="btn btn-outline b-info active p-2 px-4" id="">
+                <button type="button" class="btn btn-outline b-info p-2 px-sm-4" id="">
                   Year
                 </button>
                 <button type="button" class="btn btn-outline b-info p-2 px-sm-4">
@@ -219,7 +245,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center mt-3">
+          <div class="row justify-content-start mt-3">
             <div class="col-sm-6 col-md-4">
               <div class="box p-a btn w-100 text-left btn-outline b-accent">
                 <div class="pull-left m-r">
@@ -240,7 +266,7 @@
               <div class="box p-a btn w-100 text-left btn-outline b-warn">
                 <div class="pull-left m-r">
                   <span class="w-40 accent text-center rounded">
-                    <i class="material-icons">supervisor_account</i>
+                    <i class="fa fa-money"></i>
                   </span>
                 </div>
                 <div class="clear">
@@ -256,7 +282,7 @@
               <div class="box p-a btn w-100 text-left btn-outline b-accent">
                 <div class="pull-left m-r">
                   <span class="w-40 warn text-center rounded">
-                    <i class="material-icons">style </i>
+                    <i class="fa fa-money"></i>
                   </span>
                 </div>
                 <div class="clear">
@@ -268,38 +294,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4">
-              <div class="box p-a btn w-100 text-left btn-outline b-warn">
-                <div class="pull-left m-r">
-                  <span class="w-40 accent text-center rounded">
-                    <i class="material-icons">supervisor_account</i>
-                  </span>
-                </div>
-                <div class="clear">
-                  <h4 class="m-0 text-md">
-                    <a>1,208
-                      <span class="text-sm text-success">(+40%)</span></a>
-                  </h4>
-                  <small class="text-muted">Total Players </small>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-4">
-              <div class="box p-a btn w-100 text-left btn-outline b-accent">
-                <div class="pull-left m-r">
-                  <span class="w-40 warn text-center rounded">
-                    <i class="material-icons">style </i>
-                  </span>
-                </div>
-                <div class="clear">
-                  <h4 class="m-0 text-md">
-                    <a>1,200
-                      <span class="text-sm text-success">(+40%)</span></a>
-                  </h4>
-                  <small class="text-muted">Active Players</small>
-                </div>
-              </div>
-            </div>
+
             <div class="col-sm-6 col-md-4">
               <div class="box p-a btn w-100 text-left btn-outline b-warn">
                 <div class="pull-left m-r">
@@ -314,6 +309,32 @@
                   </h4>
                   <small class="text-muted">Dormant Players</small>
                 </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="box p-a btn w-100 text-left btn-outline b-accent">
+                <div class="pull-left m-r">
+                  <span class="w-40 warn text-center rounded">
+                    <i class="material-icons">supervisor_account</i>
+                  </span>
+                </div>
+                <div class="clear">
+                  <h4 class="m-0 text-md">
+                    <a>1,200
+                      <span class="text-sm text-success">(+40%)</span></a>
+                  </h4>
+                  <small class="text-muted">Active Players</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 p-0">
+            <div class="box">
+              <div class="box-header pb-0">
+                <h2>Income Analysis</h2>
+              </div>
+              <div class="box-body">
+                <canvas id="myChart"></canvas>
               </div>
             </div>
           </div>
