--- a/income-commission.html
+++ b/income-commission.html
@@ -13,9 +13,6 @@
   <link rel="stylesheet" href="css/font-awesome/css/font-awesome.css" type="text/css" />
   <!-- ################ BOOTSTRAP -->
   <link rel="stylesheet" href="css/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
-  <!-- Bootstrap Datepicker CSS & JS -->
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
   <!-- ################ CSS -->
   <link rel="stylesheet" href="css/app.css" type="text/css" />
   <link rel="stylesheet" href="css/style.css">
@@ -72,7 +69,7 @@
                     </i>
                   </span>
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/income.svg" alt="" height="17px">
                   </span>
                   <span class="nav-text">Income</span>
                 </a>
@@ -84,23 +81,23 @@
                   </li>
                   <li>
                     <a href="income-commission.html">
-                      <span class="nav-text">Total Supacash Commission</span>
+                      <span class="nav-text">Supacash Commission</span>
                     </a>
                   </li>
                 </ul>
               </li>
               <li>
-                <a href="withdrawal.html">
+                <a href="payout.html">
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/payout.svg" alt="" height="17px">
                   </span>
-                  <span class="nav-text">Withdrawal</span>
+                  <span class="nav-text">Payout</span>
                 </a>
               </li>
               <li>
                 <a href="supacash.html">
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/voucher.svg" alt="" height="17px">
                   </span>
                   <span class="nav-text">SupaCash</span>
                 </a>
@@ -108,7 +105,7 @@
               <li>
                 <a href="register-players.html">
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/user.svg" alt="" height="17px">
                   </span>
                   <span class="nav-text">Register Players</span>
                 </a>
@@ -119,7 +116,7 @@
                     <i class="fa fa-caret-down"></i>
                   </span>
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/Reports.svg" alt="" height="17px">
                   </span>
                   <span class="nav-text">Reports</span>
                 </a>
@@ -130,8 +127,8 @@
                     </a>
                   </li>
                   <li>
-                    <a href="report-withdrawal.html">
-                      <span class="nav-text">Withdrawal History</span>
+                    <a href="report-payout.html">
+                      <span class="nav-text">Payout History</span>
                     </a>
                   </li>
                 </ul>
@@ -145,6 +142,7 @@
 
     <!-- content -->
     <div id="content" class="app-content box-shadow-z3" role="main">
+      <!-- header -->
       <div class="app-header info box-shadow-z4 navbar-md">
         <div class="navbar navbar-toggleable-sm flex-row align-items-center">
           <!-- Open side - Naviation on mobile -->
@@ -167,6 +165,24 @@
 
           <!-- navbar right -->
           <ul class="nav navbar-nav flex-row align-items-center ml-auto">
+            <div class="row m-0 white align-items-center p-1 mr-2 mr-sm-3">
+              <div class="col-4 p-0">
+                <i class="material-icons text-info" style="font-size: 25px;">&#xe850;</i>
+              </div>
+              <div class="col-8 p-0 text-info ">
+                <p style="font-size: 10px;" class="p-0 m-0">Top Up</p>
+                <p style="font-size: 10px;" class="p-0 m-0">R10,000.00</p>
+              </div>
+            </div>
+            <div class="row m-0 white align-items-center p-1 mr-2 mr-sm-3">
+              <div class="col-4 p-0">
+                <i class="material-icons text-success" style="font-size: 25px;">&#xe850;</i>
+              </div>
+              <div class="col-8 p-0 text-success ">
+                <p style="font-size: 10px;" class="p-0 m-0">Commission</p>
+                <p style="font-size: 10px;" class="p-0 m-0">R10,000.00</p>
+              </div>
+            </div>
             <li class="nav-item dropdown">
               <a href class="nav-link dropdown-toggle text-ellipsis p-0" data-toggle="dropdown">
                 <span class="avatar w-32">
@@ -192,111 +208,129 @@
           <!-- / navbar right -->
         </div>
       </div>
+
       <div class="app-body" id="view">
         <!-- ############ PAGE START-->
         <div class="padding">
           <div class="box-header row m-0 px-0 pt-0">
-            <div class="col-12 col-sm-4 px-0">
-              <h5 class="m-0 mt-2 mt-sm-0 _500">SupaCash Commission</h5>
+            <div class="col-12 px-0 col-sm-6">
+              <h5 class="m-0 mt-2 mt-sm-0 _500">SupaCash Commission Overview</h5>
             </div>
-            <div class="col-12 col-sm-8 d-flex justify-content-sm-end pt-3 pt-sm-0 px-0">
+            <div class="col-12 col-sm-6 d-flex justify-content-sm-end pt-3 pt-sm-0 px-0">
               <a href="" class="btn btn-fw info">
                 <i class="fa fa-arrow-down" style="padding-right: 5px"></i> Download PDF
               </a>
             </div>
           </div>
-
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-1 form-control-label">Year</label>
+            <div class="col-sm-3">
+              <select class="form-control c-select">
+                <option>2024</option>
+                <option>2023</option>
+                <option>2022</option>
+                <option>2021</option>
+              </select>
+            </div>
+            <label for="inputEmail3" class="col-sm-1 form-control-label">Month</label>
+            <div class="col-sm-3">
+              <select class="form-control c-select">
+                <option>January</option>
+                <option>February</option>
+                <option>March</option>
+                <option>April</option>
+              </select>
+            </div>
+          </div>
+          <div class="row justify-content-start mt-3">
+            <div class="col-sm-6 col-md-4">
+              <div class="box p-a btn w-100 text-left btn-outline b-accent">
+                <div class="pull-left m-r">
+                  <span class="w-40 warn text-center rounded">
+                    <i class="fa fa-money"></i>
+                  </span>
+                </div>
+                <div class="clear">
+                  <h4 class="m-0 text-md">
+                    <a>R1,208.00</a>
+                  </h4>
+                  <small class="text-muted">Total Commission Earned</small>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="box p-a btn w-100 text-left btn-outline b-warn">
+                <div class="pull-left m-r">
+                  <span class="w-40 accent text-center rounded">
+                    <i class="material-icons">style</i>
+                  </span>
+                </div>
+                <div class="clear">
+                  <h4 class="m-0 text-md">
+                    <a>28</a>
+                  </h4>
+                  <small class="text-muted">Total Sales</small>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="box p-a btn w-100 text-left btn-outline b-accent">
+                <div class="pull-left m-r">
+                  <span class="w-40 warn text-center rounded">
+                    <i class="fa fa-money"></i>
+                  </span>
+                </div>
+                <div class="clear">
+                  <h4 class="m-0 text-md">
+                    <a>R1,900.00</a>
+                  </h4>
+                  <small class="text-muted">Available Income</small>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col-12 p-0">
             <div class="box">
-              <div class="box-header">
-                <div class="form-group row m-0">
-                  <!-- <div class="col-sm-4 p-0 pr-sm-3">
-                    <input type="text" class="form-control rounded" placeholder="Search by ID/Name" />
-                  </div> -->
-                  <div class="col-sm-4 p-0 px-sm-1 py-3 py-sm-0">
-                    <div class="input-group date rounded" id="datepicker1"
-                      style="border: 1px solid rgba(120, 130, 140, 0.2); overflow: hidden;">
-                      <input type="text" class="form-control" placeholder="Select From Date">
-                      <div class="input-group-append calender-icon">
-                        <span class="input-group-text ">
-                          <i class="fa fa-calendar"></i>
-                        </span>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-4 p-0 pl-sm-3">
-                    <div class="input-group date rounded" id="datepicker2"
-                      style="border: 1px solid rgba(120, 130, 140, 0.2); overflow: hidden;">
-                      <input type="text" class="form-control" placeholder="Select To Date">
-                      <div class="input-group-append calender-icon">
-                        <span class="input-group-text ">
-                          <i class="fa fa-calendar"></i>
-                        </span>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-4 p-0 pl-sm-3 d-flex justify-content-end">
-                    <button class="btn btn-outline b-info text-info" style="margin-right: 10px">
-                      <i class="fa fa-check" style="padding-right: 10px"></i>Apply
-                    </button>
-                    <button class="btn btn-fw danger">
-                      <i class="fa fa-remove" style="padding-right: 5px"></i> Reset
-                    </button>
-                  </div>
+              <div class="box-header pb-0">
+                <h2>Income Breakdown</h2>
+              </div>
+              <div class="box-body">
+                <div class="table-responsive p-0 m-0">
+                  <table class="table table-striped b-t">
+                    <thead>
+                      <tr>
+                        <th>Date</th>
+                        <th>Voucher Sold Amount</th>
+                        <th>Commission % </th>
+                        <th>Commission Earned</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>29-01-2024</td>
+                        <td>R2,000.00</td>
+                        <td>10%</td>
+                        <td>R200.00</td>
+                      </tr>
+                      <tr>
+                        <td>15-01-2024</td>
+                        <td>R1,000.00</td>
+                        <td>10%</td>
+                        <td>R100.00</td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
+                <nav aria-label="Page navigation example">
+                  <ul class="pagination m-0 pb-3 justify-content-center">
+                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                  </ul>
+                </nav>
               </div>
-              <!-- <div class="box-header pt-0 mb-3">
-                <div class="row m-0">
-                  <div class="col-12 d-flex justify-content-sm-end pt-3 pt-sm-0 px-0">
-                    <button class="btn btn-outline b-info text-info" style="margin-right: 10px">
-                      <i class="fa fa-check" style="padding-right: 10px"></i>Apply
-                    </button>
-                    <button class="btn btn-fw danger">
-                      <i class="fa fa-remove" style="padding-right: 5px"></i> Reset
-                    </button>
-                  </div>
-                </div>
-              </div> -->
-              <div class="row m-0 px-3 mt-3">
-                <button class=" btn-outline disabled rounded-bottom rounded-top">Total Sold: 20</button>
-                <button class=" btn-outline disabled rounded-bottom rounded-top ml-3">Total Sold Amount:
-                  R2,000.00</button>
-                <button class=" btn-outline disabled rounded-bottom rounded-top ml-3">Total Commission: R200.00</button>
-                <button class=" btn-outline disabled rounded-bottom rounded-top ml-3">Commission Structure: R10.00 per
-                  voucher sold</button>
-              </div>
-              <div class="table-responsive p-0 m-0 px-3">
-                <table class="table table-striped b-t">
-                  <thead>
-                    <tr>
-                      <th>Date</th>
-                      <th>Voucher Code</th>
-                      <th>Sales Amount</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>29-08-2024</td>
-                      <td>WASD234ID</td>
-                      <td>R1,000.00</td>
-                    </tr>
-                    <tr>
-                      <td>29-08-2024</td>
-                      <td>WASD234ID</td>
-                      <td>R1,000.00</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <nav aria-label="Page navigation example">
-                <ul class="pagination m-0 pb-3 justify-content-center">
-                  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                  <li class="page-item"><a class="page-link" href="#">1</a></li>
-                  <li class="page-item"><a class="page-link" href="#">2</a></li>
-                  <li class="page-item"><a class="page-link" href="#">3</a></li>
-                  <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                </ul>
-              </nav>
             </div>
           </div>
         </div>
@@ -305,17 +339,14 @@
       </div>
     </div>
     <!-- / -->
-
     <!-- ############ LAYOUT END-->
   </div>
   <!-- jQuery -->
   <script src="js/salesChart.js"></script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.js"></script>
-  <script src="js/calenderScripts.js"></script>
+  <script src="js/script.js"></script>
   <script src="js/navScript.js"></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
   <!-- endbuild -->
 </body>
 
