--- a/payout.html
+++ b/payout.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Total Income</title>
+  <title>Payout</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui" />
   <!-- ################ FAVICON -->
   <!-- <link rel="shortcut icon" sizes="196x196" href="../assets/images/logo.png"> -->
@@ -213,137 +213,11 @@
         <!-- ############ PAGE START-->
         <div class="padding">
           <div class="box-header row m-0 px-0 pt-0">
-            <div class="col-12 col-sm-6 px-0">
-              <h5 class="m-0 mt-2 mt-sm-0 _500">Income Overview</h5>
-            </div>
-            <div class="col-12 col-sm-6 d-flex justify-content-sm-end pt-3 pt-sm-0 px-0">
-              <a href="" class="btn btn-fw info">
-                <i class="fa fa-arrow-down" style="padding-right: 5px"></i> Download PDF
-              </a>
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="inputEmail3" class="col-sm-1 form-control-label">Year</label>
-            <div class="col-sm-3">
-              <select class="form-control c-select">
-                <option>2024</option>
-                <option>2023</option>
-                <option>2022</option>
-                <option>2021</option>
-              </select>
-            </div>
-            <label for="inputEmail3" class="col-sm-1 form-control-label">Month</label>
-            <div class="col-sm-3">
-              <select class="form-control c-select">
-                <option>January</option>
-                <option>February</option>
-                <option>March</option>
-                <option>April</option>
-              </select>
+            <div class="col-12 col-sm-4 px-0">
+              <h5 class="m-0 mt-2 mt-sm-0 _500">Payout</h5>
             </div>
           </div>
           <div class="row justify-content-start mt-3">
-            <div class="col-sm-6 col-md-4">
-              <div class="box p-a btn w-100 text-left btn-outline b-accent">
-                <div class="pull-left m-r">
-                  <span class="w-40 warn text-center rounded">
-                    <i class="fa fa-money"></i>
-                  </span>
-                </div>
-                <div class="clear">
-                  <h4 class="m-0 text-md">
-                    <a>R1,208.00</a>
-                  </h4>
-                  <small class="text-muted">Total Income</small>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-4">
-              <div class="box p-a btn w-100 text-left btn-outline b-warn">
-                <div class="pull-left m-r">
-                  <span class="w-40 accent text-center rounded">
-                    <i class="fa fa-money"></i>
-                  </span>
-                </div>
-                <div class="clear">
-                  <h4 class="m-0 text-md">
-                    <a>R1,028.00</a>
-                  </h4>
-                  <small class="text-muted">Pending Income</small>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-4">
-              <div class="box p-a btn w-100 text-left btn-outline b-accent">
-                <div class="pull-left m-r">
-                  <span class="w-40 warn text-center rounded">
-                    <i class="fa fa-money"></i>
-                  </span>
-                </div>
-                <div class="clear">
-                  <h4 class="m-0 text-md">
-                    <a>R1,900.00</a>
-                  </h4>
-                  <small class="text-muted">Available Income</small>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 p-0">
-            <div class="box">
-              <div class="box-header pb-0">
-                <h2>Income Breakdown</h2>
-              </div>
-              <div class="box-body">
-                <div class="table-responsive p-0 m-0">
-                  <table class="table table-striped b-t">
-                    <thead>
-                      <tr>
-                        <th>Date</th>
-                        <th>Registerations</th>
-                        <th>FTDs</th>
-                        <th>Registration Commission</th>
-                        <th>FTD Commission</th>
-                        <th>Registrations Income</th>
-                        <th>FTDs Income </th>
-                        <th>Total Income</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>29-01-2024</td>
-                        <td>20</td>
-                        <td>10</td>
-                        <td>R10.00</td>
-                        <td>R20.00</td>
-                        <td>R100.00</td>
-                        <td>R200.00</td>
-                        <td>R300.00</td>
-                      </tr>
-                      <tr>
-                        <td>29-01-2024</td>
-                        <td>20</td>
-                        <td>10</td>
-                        <td>R10.00</td>
-                        <td>R20.00</td>
-                        <td>R100.00</td>
-                        <td>R200.00</td>
-                        <td>R300.00</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <nav aria-label="Page navigation example">
-                  <ul class="pagination m-0 pb-3 justify-content-center">
-                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                  </ul>
-                </nav>
-              </div>
-            </div>
           </div>
         </div>
 
