--- a/report-topup.html
+++ b/report-topup.html
@@ -72,7 +72,7 @@
                     </i>
                   </span>
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/income.svg" alt="" height="17px">
                   </span>
                   <span class="nav-text">Income</span>
                 </a>
@@ -84,23 +84,23 @@
                   </li>
                   <li>
                     <a href="income-commission.html">
-                      <span class="nav-text">Total Supacash Commission</span>
+                      <span class="nav-text">Supacash Commission</span>
                     </a>
                   </li>
                 </ul>
               </li>
               <li>
-                <a href="withdrawal.html">
+                <a href="payout.html">
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/payout.svg" alt="" height="17px">
                   </span>
-                  <span class="nav-text">Withdrawal</span>
+                  <span class="nav-text">Payout</span>
                 </a>
               </li>
               <li>
                 <a href="supacash.html">
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/voucher.svg" alt="" height="17px">
                   </span>
                   <span class="nav-text">SupaCash</span>
                 </a>
@@ -108,7 +108,7 @@
               <li>
                 <a href="register-players.html">
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/user.svg" alt="" height="17px">
                   </span>
                   <span class="nav-text">Register Players</span>
                 </a>
@@ -119,7 +119,7 @@
                     <i class="fa fa-caret-down"></i>
                   </span>
                   <span class="nav-icon">
-                    <img src="images/dashboard.svg" alt="" height="17px">
+                    <img src="images/Reports.svg" alt="" height="17px">
                   </span>
                   <span class="nav-text">Reports</span>
                 </a>
@@ -130,8 +130,8 @@
                     </a>
                   </li>
                   <li>
-                    <a href="report-withdrawal.html">
-                      <span class="nav-text">Withdrawal History</span>
+                    <a href="report-payout.html">
+                      <span class="nav-text">Payout History</span>
                     </a>
                   </li>
                 </ul>
@@ -167,6 +167,24 @@
 
           <!-- navbar right -->
           <ul class="nav navbar-nav flex-row align-items-center ml-auto">
+            <div class="row m-0 white align-items-center p-1 mr-2 mr-sm-3">
+              <div class="col-4 p-0">
+                <i class="material-icons text-info" style="font-size: 25px;">&#xe850;</i>
+              </div>
+              <div class="col-8 p-0 text-info ">
+                <p style="font-size: 10px;" class="p-0 m-0">Top Up</p>
+                <p style="font-size: 10px;" class="p-0 m-0">R10,000.00</p>
+              </div>
+            </div>
+            <div class="row m-0 white align-items-center p-1 mr-2 mr-sm-3">
+              <div class="col-4 p-0">
+                <i class="material-icons text-success" style="font-size: 25px;">&#xe850;</i>
+              </div>
+              <div class="col-8 p-0 text-success ">
+                <p style="font-size: 10px;" class="p-0 m-0">Commission</p>
+                <p style="font-size: 10px;" class="p-0 m-0">R10,000.00</p>
+              </div>
+            </div>
             <li class="nav-item dropdown">
               <a href class="nav-link dropdown-toggle text-ellipsis p-0" data-toggle="dropdown">
                 <span class="avatar w-32">
